--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/Garrison-Shoemake/holbertonschool-unity/blob/eaa962c16fd22054924439af1da3a8673435a1ee/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
+<meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/Garrison-Shoemake/holbertonschool-unity/eaa962c16fd22054924439af1da3a8673435a1ee/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
