updated to make actual html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/Garrison-Shoemake/holbertonschool-unity/eaa962c16fd22054924439af1da3a8673435a1ee/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
+<!doctype html>
+<html>
+  <head>
+    <title>This is the title of the webpage!</title>
+    <meta http-equiv="refresh" content="0; url=https://holbertonschool-unity.github.io/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
+  </head>
+  <body>
+  </body>
+</html>
