pushed raw content for html redirect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>
-    <meta http-equiv="refresh" content="0; url=https://holbertonschool-unity.github.io/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
+    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/Garrison-Shoemake/holbertonschool-unity/master/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
   </head>
   <body>
   </body>
