trying same method from another resource

--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
 <!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/Garrison-Shoemake/holbertonschool-unity/master/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html">
-  </head>
-  <body>
-  </body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://Garrison-Shoemake.github.io/holbertonschool-unity/0x0E-unity-webvr/0x0E-unity-webvr/Builds/index.html"/>
